tests/out/error/import/shadowing.out
tests/out/error/import/shadowing.in.bt:3:9 error: cannot shadow import "os"
tests/out/error/import/shadowing.in.bt:5:4 error: cannot shadow import "os"
